Explicitly keep track of active HTMLMediaElements in MediaSessions. https://bugs.webkit.org/show_bug.cgi?id=145829

Patch by Matt Rajca <mrajca@apple.com> on 2015-06-10
Reviewed by Eric Carlson.

* Modules/mediasession/MediaSession.cpp: Add support for keeping track of active media elements.
(WebCore::MediaSession::addActiveMediaElement):
* Modules/mediasession/MediaSession.h:
* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::playInternal): If the paused attribute is true and the readyState attribute has the
  value HAVE_FUTURE_DATA or HAVE_ENOUGH_DATA, the media element becomes an active participating element of the
  media session.

Canonical link: https://commits.webkit.org/163894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185424 268f45cc-cd09-0410-ab3c-d52691b4dbfc